<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvDetalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detalhe"
        app:layout_constraintStart_toStartOf="@+id/tvTipo"
        app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/valor"
        app:layout_constraintStart_toStartOf="@+id/tvDetalhe"
        app:layout_constraintTop_toBottomOf="@+id/tvDetalhe" />

    <TextView
        android:id="@+id/tvDataLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/data_lancamento"
        app:layout_constraintStart_toStartOf="@+id/tvValor"
        app:layout_constraintTop_toBottomOf="@+id/tvValor" />

    <Button
        android:id="@+id/btLancar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataLancamento" />

    <Button
        android:id="@+id/btSaldo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btVerLancamentos" />

    <Button
        android:id="@+id/btVerLancamentos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:text="@string/ver_lancamentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLancar" />

    <EditText
        android:id="@+id/etDataLancamento"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDataLancamento"
        app:layout_constraintStart_toEndOf="@+id/tvDataLancamento"
        app:layout_constraintTop_toTopOf="@+id/tvDataLancamento"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvValor"
        app:layout_constraintStart_toEndOf="@+id/tvValor"
        app:layout_constraintTop_toTopOf="@+id/tvValor"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTipo"
        app:layout_constraintTop_toTopOf="@+id/tvTipo" />

    <Spinner
        android:id="@+id/spDetalhe"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDetalhe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDetalhe"
        app:layout_constraintTop_toTopOf="@+id/tvDetalhe" />

</androidx.constraintlayout.widget.ConstraintLayout>